# PromptStudio

./: .gitignore  ADAPTIVE_RAG.md  ADVANCED_FEATURES.md  Dockerfile  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  index.html  mcp-config.json  netlify.toml  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  vercel.json  white papper.md  الورقة البيضاء.md
.bolt/: prompt
backend/python/: .env.example  Dockerfile  pyproject.toml  requirements.txt  run.py
backend/python/app/: __init__.py  main.py
backend/python/app/agents/: __init__.py  autogen_agents.py  langgraph_workflow.py
backend/python/app/agents/models/: __init__.py  agent_models.py
backend/python/app/agents/tools/: __init__.py  analysis_tools.py  execution_tools.py  search_tools.py
backend/python/app/api/: __init__.py
backend/python/app/core/: __init__.py  config.py  database.py  logging.py
backend/python/app/models/: __init__.py  command_models.py  db_models.py  llm_models.py  rag_models.py
backend/python/app/services/: __init__.py  batch_service.py  command_service.py  embedding_service.py  instructor_service.py  llm_service.py  prompt_chain_service.py  rag_service.py  template_service.py  yaml_loader.py
backend/python/app/websocket/: __init__.py  bridge.py  handlers.py
backend/python/commands/: analyze_prompt.yaml  code_review.yaml  cost_prediction.yaml  intent_detection.yaml  meta_prompt.yaml  refine_prompt.yaml  safety_check.yaml  summarize.yaml  translate_prompt.yaml
backend/python/tests/: __init__.py  test_api.py  test_yaml_loader.py
(+208 files in other folders)
